<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mist.refrigeratorreminder.ui.home.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/listFragment"
        android:name="com.mist.refrigeratorreminder.ui.list.ListFragment"
        android:label="@string/title_list" />

    <fragment
        android:id="@+id/addItemFragment"
        android:name="com.mist.refrigeratorreminder.ui.edit.EditItemFragment"
        android:label="@string/title_add" />

    <fragment
        android:id="@+id/editItemFragment"
        android:name="com.mist.refrigeratorreminder.ui.edit.EditItemFragment"
        android:label="@string/action_edit" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.mist.refrigeratorreminder.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />
</navigation>
